--- a/config/.env-template
+++ b/config/.env-template
@@ -1,11 +1,15 @@
+###### !! WARNING !!
+###### Dont ever push env values to your codebase.
+###### I am pushing it just so if someone wants to run this application, it is runnable.
+
 ###### Server Configuration
-PORT=
-JWT_SECRET=
-JWT_EXPIRE_HOURS=
+PORT=4000
+JWT_SECRET=c5327b21-300c-4d52-b6d0-abdcaeccf930
+JWT_EXPIRE_HOURS=24h
 
 ###### DB
-DB_CONNNECTION_STRING=
-DEV_DB=
-PROD_DB=
+DB_CONNNECTION_STRING=mongodb+srv://edward0414:UZuAZ54eU266eZcF@dapper-demo.vklrc0p.mongodb.net/?retryWrites=true&w=majority
+DEV_DB=test
+PROD_DB=dapper-demo
 
-MONGO_SALT=
+MONGO_SALT=$2b$10$YA7AVo4gHy68AKm2FPTlN.
